--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -71,7 +71,7 @@
     <!-- <h4 *ngIf="checkEmailExist" class="name-validation">Your entered email already exists</h4> -->
     <ion-item >
       <ion-icon class="icon-color" class="ion-text-left" ios="ios-call" md="md-call" slot="start"></ion-icon>
-      <ion-label color="ligh-grey"  position="floating">cell phone Number</ion-label>
+      <ion-label color="ligh-grey"  position="floating">Phone Number</ion-label>
       <ion-input 
       [value]="number"
       [(ngModel)]="number" type="tel"
